--- a/webSql/index.html
+++ b/webSql/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1> 
             <span style="float: left; font-size: medium; color: whitesmoke;">
-                <a style=" text-decoration: none; color: whitesmoke;" href="../home.html">Back To Home
+                <a style=" text-decoration: none; color: whitesmoke;" href="../index.html">Back To Home
                 </a>
             </span>
             WebSql CRUD Application 
