--- a/LocalStorage/index.html
+++ b/LocalStorage/index.html
@@ -13,7 +13,7 @@
         
         <h1>
             <span style="float: left; font-size: medium; color: whitesmoke;">
-                <a style=" text-decoration: none; color: whitesmoke;" href="../home.html">Back To Home
+                <a style=" text-decoration: none; color: whitesmoke;" href="../index.html">Back To Home
                 </a>
             </span>
              LocalStorage CRUD Application 
